--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -59,6 +59,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Update" />
+
+        <Button
+            android:id="@+id/add_new"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add new" />
     </LinearLayout>
 
 </RelativeLayout>
